@@ -2,10 +2,10 @@ package org.jabref.logic.exporter;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.xml.parsers.DocumentBuilderFactory;
+import javax.xml.parsers.ParserConfigurationException;
 
 import org.jabref.logic.bibtex.comparator.FieldComparator;
 import org.jabref.logic.bibtex.comparator.FieldComparatorStack;
@@ -34,7 +34,7 @@ class OOCalcDatabase {
 
     private final List<BibEntry> entries = new ArrayList<>();
     private final List<Field> toExportFields = Stream.concat(FieldFactory.getStandardFieldsWithCitationKey().stream(), Stream.of(REPORT_TYPE_FIELD))
-                                                     .collect(Collectors.toList());
+                                                     .toList();
 
     public OOCalcDatabase(BibDatabase bibtex, List<BibEntry> entries) {
         this.entries.addAll(entries != null ? entries : bibtex.getEntries());
@@ -68,7 +68,7 @@ class OOCalcDatabase {
             for (BibEntry entry : entries) {
                 addEntryRow(entry, table, document);
             }
-        } catch (Exception e) {
+        } catch (ParserConfigurationException e) {
             LOGGER.warn("Exception caught...", e);
         }
         return document;
